# nexus-agent

./: .env  .gitignore  Cargo.toml  PHASE2.md  README.md  build.rs  sb-service.json
.cargo/: config.toml
.github/workflows/: release.yml
proto/tunnel/v1/: tunnel.proto
scripts/: install.ps1  install.sh
src/: config.rs  main.rs
src/management/: mod.rs
src/proxy/: mod.rs
src/registry/: mod.rs
src/tunnel/: mod.rs
src/updater/: mod.rs
